welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: ':' expected but ')' found.
def faireMotif(c) { 
                ^MethodsPicture:36: error: identifier expected but '}' found.
}
^